--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+h1{
+    color: lightblue;
+}
+
 /* app */
 #app{
     width: 80%;
@@ -17,4 +21,54 @@ body{
     padding-top: 50px;
     text-align: center;
 
+}
+
+/* button */
+
+.new-task{
+    margin-top: 20px;  
+}
+input{
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 14px;
+    color: #555;
+    background-color: #fff;
+    margin-right: 5px;
+    margin-bottom: 20px;
+}
+
+button{
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+    color: white;
+    background-color: coral;
+    cursor: pointer;
+
+}
+
+/* task */
+
+.task-container{
+    margin: 30px auto;
+    width: 300px;
+}
+
+ul{
+    width: 100%;
+}
+
+li{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+i{
+    cursor: pointer;
 }
